Source/WebCore/bindings/js/JSExceptionBase.cpp
@@ -28,7 +28,6 @@
 
 #include "JSDOMCoreException.h"
 #include "JSEventException.h"
-#include "JSRangeException.h"
 #include "JSSQLException.h"
 #include "JSSVGException.h"
 #include "JSXMLHttpRequestException.h"
@@ -41,8 +40,6 @@ ExceptionBase* toExceptionBase(JSC::JSValue value)
 {
     if (DOMCoreException* domException = JSDOMCoreException::toWrapped(value))
         return reinterpret_cast<ExceptionBase*>(domException);
-    if (RangeException* rangeException = JSRangeException::toWrapped(value))
-        return reinterpret_cast<ExceptionBase*>(rangeException);
     if (EventException* eventException = JSEventException::toWrapped(value))
         return reinterpret_cast<ExceptionBase*>(eventException);
     if (XMLHttpRequestException* xmlHttpException = JSXMLHttpRequestException::toWrapped(value))
