LayoutTests/fast/dom/Range/script-tests/range-exceptions.js
@@ -22,7 +22,7 @@ node.appendChild(c2);
 var r = document.createRange();
 r.setStart(c1, 2);
 r.setEnd(c2, 3);
-shouldThrow("r.surroundContents(document.createElement('a'))", '"Error: BAD_BOUNDARYPOINTS_ERR: DOM Range Exception 1"');
+shouldThrow("r.surroundContents(document.createElement('a'))", '"Error: InvalidStateError: DOM Exception 11"');
 
 // But not when we don't try to split the comment.
 r.setStart(c1, 0);
